--- a/src/App.scss
+++ b/src/App.scss
@@ -3,45 +3,53 @@
 #root {
   margin: 0 auto;
   padding: 0;
-
-  min-height: 100vh;
-  min-width: 100vw;
 }
 
 main {
   min-height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
 
-    .header-container {
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 24px;
+
+    .menu-options {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
+      gap: 16px;
+      text-decoration: none;
 
-    .logo-container {
+      a {
+        font-weight: 500;
+        font-size: 16px;
+        text-decoration: none;
+        color: #ffff;
+        cursor: pointer;
 
-      .logo-text {
-        display: flex;
-        align-items: start;
-        justify-content: center;
-        flex-direction: column;
-        
-          .logo-text-bold {
-            font-weight: 800;
-            font-size: 32px;
-
-          }
-        
-        .logo-text-regular {
-          font-weight: 400;
-          font-size: 24px;
+        &:hover {
+          color: $color-primary;
+          transition: all 500ms;
         }
       }
-    }  
+    }
+
+    button {
+      border-radius: 24px;
+      border: none;
+      padding: 16px 30px;
+      color: rgb(51, 51, 51);
+      background: white;
+      font-weight: 600;
+      font-size: 16px;
+    }
   }
 }
 
