--- a/src/App.scss
+++ b/src/App.scss
@@ -44,19 +44,54 @@ main {
     button {
       border-radius: 24px;
       border: none;
-      padding: 16px 30px;
-      color: rgb(51, 51, 51);
-      background: white;
-      font-weight: 600;
+      font-weight: 500;
       font-size: 16px;
+      background-color: transparent;
+      overflow: hidden;
+      position: relative;
+
+      div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      height: 100%;
+      width: 100%;
+      padding: 16px 30px;
+      border-radius: 24px;
+      border: none;
+    }
+      .btn-face-white {
+        color: rgb(51, 51, 51);
+        background: white;  
+        z-index: 998;
+      }
+
+      .btn-face-purple {
+        background: linear-gradient(45deg, #7223cf, #da2eb8);
+        color: #ffff;
+        display: none;
+        z-index: 999;
+        position: absolute;
+        top: 0;
+      } 
+
+      &:hover {
+        .btn-face-purple {
+          display: flex;
+          animation: appear 500ms linear 100ms forwards;
+        }
+      }
     }
   }
 }
 
 @keyframes appear {
-  from {
+  0% {
+    transform: translateX(-100%);
   }
-
-  to {
+  100% {
+    transform: translateX(0);
   }
 }
