--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,8 @@ main {
   align-items: center;
   flex-direction: column;
 
+  background-color: $bg-primary;
+
   .header-container {
     display: flex;
     align-items: center;
@@ -24,12 +26,12 @@ main {
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 16px;
+      gap: 30px;
       text-decoration: none;
 
       a {
-        font-weight: 500;
-        font-size: 16px;
+        font-weight: 600;
+        font-size: 20px;
         text-decoration: none;
         color: #ffff;
         cursor: pointer;
@@ -69,8 +71,6 @@ main {
       }
 
       .btn-face-purple {
-        background: linear-gradient(45deg, #7223cf, #da2eb8);
-        color: #ffff;
         display: none;
         z-index: 999;
         position: absolute;
@@ -85,13 +85,162 @@ main {
       }
     }
   }
+  .content-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    flex-grow: 1;
+    width: 100%;
+    padding: 32px;
+
+    .heading-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 60%;
+    align-items: flex-end;
+
+    h2 {
+      font-size: 80px;
+      font-weight: 750;
+
+      &:first-of-type {
+        align-self: flex-start;
+      }
+    }
+    
+    }  
+
+
+    .bubble {
+      background-color: gray;
+      padding: 12px 14px;
+      border-radius: 100%;
+      position: absolute;
+
+      &.fire{
+        right: 20px;
+        transform: rotate(-20deg);
+        bottom: 30%;
+        font-size: 24px;
+        transform: rotate(10deg);
+        animation: balance 1s alternate 400ms infinite;
+      }
+
+      &.rocket{
+        top: 20%;
+        right: 100px;
+        font-size: 42px;
+        transform: rotate(10deg);
+        animation: balance 1s alternate 400ms infinite;
+      }
+
+      &.target{
+        top: 10%;
+        left: 150px;
+        font-size: 72px;
+        transform: rotate(50deg);
+        animation: balance 1s alternate 400ms infinite;
+      }
+
+      &.shop{
+        bottom: 20%;
+        left: 5%;
+        font-size: 36px;
+        transform: rotate(50deg);
+        animation: balance 1s alternate 400ms infinite;
+      }
+    }
+  }
 }
 
 @keyframes appear {
   0% {
     transform: translateX(-100%);
+    background: white;
+    color: rgb(51, 51, 51);
   }
   100% {
     transform: translateX(0);
+    color: white;
+    background: linear-gradient(45deg, #7223cf, #da2eb8);
+  }
+}
+
+@keyframes balance {
+  0% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(50deg);
+  }
+}
+
+@media (max-width: 1200px) {
+  main {
+    .header-container {
+      flex-direction: column;
+      gap: 16px;
+
+      .menu-options {
+        gap: 16px;
+
+        a {
+          font-size: 16px;
+        }
+      }
+
+      button {
+        div {
+          padding: 12px 24px;
+        }
+      }
+    }
+
+    .content-container {
+      flex-direction: column;
+      padding: 16px;
+
+      .heading-container {
+        width: 100%;
+        align-items: center;
+
+        h2 {
+          font-size: 40px;
+          text-align: center;
+
+          &:first-of-type {
+            align-self: center;
+          }
+        }
+      }
+
+      .bubble {
+        &.fire {
+          right: 55px;
+          bottom: 20%;
+          font-size: 18px;
+        }
+
+        &.rocket {
+          top: 22%;
+          right: 50px;
+          font-size: 24px;
+        }
+
+        &.target {
+          top: 15%;
+          left: 50px;
+          font-size: 36px;
+        }
+
+        &.shop {
+          bottom: 22%;
+          left: 8%;
+          font-size: 24px;
+        }
+      }
+    }
   }
 }
